# orangepi5-rkllm

./: .gitignore  CMakeLists.txt  HANDOFF.md  PROJECT_HISTORY.md  README.md  ggml-rkllm.c  ggml-rkllm.h  rkllm_enhanced.cpp  server_patched.py
convert/: Dockerfile  check_dtypes.py  check_hf_token.sh  export_qwen3.py  hf_device_login.sh  hf_login.sh  hf_upload.py  inspect_so.sh  run_export.sh  run_test_grq.sh  test_grq.py
examples/rkllm/: CMakeLists.txt  main.cpp
rkllm-npu2/: hot_cold.h
scripts/: split_rkllm.py
